# teamscheire_sara

./: .gitignore  .gitmodules  read_serial.py
3dprint/: ESP32_LyraT lit _v15.f3d  ESP32_LyraT lit v16.stl  ESP32_LyraT v10.stl  ESP32_LyraT v11.stl  ESP32_LyraT v12.f3d  ESP32_LyraT v12.stl  ESP32_LyraT v14.stl  TeamScheire_Sara v22.f3d  back.stl  front.stl  front_support.stl  m5_enclosure_v01.stl  part1.stl  part2.stl  partx.stl
arduino/SD_Test/: SD_Test.ino
arduino/blink_esp32/: blink_esp32.ino
arduino/little_soundie_test/: little_soundie_test.ino
arduino/main/: localization.cpp  localization.h  main.h  main.ino  simulation.cpp  simulation.h  states.c  uwb_parser.cpp  uwb_parser.h  webserver.cpp  webserver.h
arduino/taudio_test/: WM8978.cpp  WM8978.h  i2s.c  taudio_test.ino
arduino/wm8978_test/: adc1_i2s_private.h  (+3 more)
audio/: f.raw  g.raw  h.raw  k.raw  letters dressuur nederlands 2.aup  x.raw
esp/: README.MD  horselocator.code-workspace
esp/horse_locator_esp/main/: CMakeLists.txt  app_ble.c  app_config.c  dfplayer.c  led_strip.c  localization.c  main.c
esp/horse_locator_esp/main/include/: app_ble.h  app_config.h  dfplayer.h  localization.h  main.h
localization/: get_uwb_data.py  localization.py  test.py  test_intersection.py
sdcard/: CONFIG copy.CFG  CONFIG.CFG  CONFIG01.CFG  CONFIG_big.CFG  CONFIG_small.CFG
simulation/: draw_plot.py  test_calibration.py  test_localization.py  test_localization_intersections.py  test_localization_measurement.py  test_localization_minmax.py  test_localization_pf.py  test_position.py  test_ranges_localization_pf.py
(+94 files in other folders)
