idf_component_register(SRCS 
                          "localization.c"
                          "app_config.c"
                          "app_ble.c"
                          "led_strip.c"
                          "dfplayer.c"
                          "main.c"
                    INCLUDE_DIRS 
                          "." 
                          "include")